[package]
name = "waveform-function-collapse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "waveform-function-collapse"

[lib]
name = "waveform_function_collapse_lib"
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
js-sys = "0.3.69"
tinybitset = "0.0.1"
wasm-bindgen = "0.2.91"
